# 2023_12_JUMP_data_only_vignettes

./: .gitignore  .nojekyll  CONTRIBUTING.html  CONTRIBUTING.ipynb  CONTRIBUTING.md  _quarto.yml  cite.html  cite.ipynb  flake.nix  index.html  index.ipynb  index.md  pyproject.toml  readme.html  readme.ipynb  readme.md  robots.txt  search.json  sitemap.xml
colab/: 0_overview.ipynb  11_retrieve_profiles.ipynb  12_add_metadata.ipynb  13_calculate_activity.ipynb  14_display_perturbation_images.ipynb  15_explore_distance_clusters.ipynb  16_query_genes_externally.ipynb
community/: citing.html  citing.ipynb  citing.md
explanations/: FAQ.html  FAQ.ipynb  FAQ.md  data-structure.html  data-structure.ipynb  data-structure.md  data_description.html  data_description.ipynb  data_description.md  dataset-overview.html  dataset-overview.ipynb  dataset-overview.md  glossary.html  glossary.ipynb  glossary.md  known_issues.html  known_issues.ipynb  known_issues.md  pipelines.html  pipelines.ipynb  pipelines.md  quirks_details.html  quirks_details.ipynb  quirks_details.md
howto/: 0_howto.md  0_howto_interactive_tools.md  1_jumprr_steps.md  1_retrieve_profiles.html  1_retrieve_profiles.ipynb  data-loading.html  data-loading.ipynb  data-loading.md
quick-start/: index.md
reference/: 00_gene_index.html  00_gene_index.ipynb  00_gene_index.py  01_chemical_query.html  01_chemical_query.ipynb  01_chemical_query.md  computational_pipelines.html  computational_pipelines.ipynb  glossary.html  glossary.ipynb  glossary.md  metadata-guide.html  metadata-guide.ipynb  metadata-guide.md
(+35 files in other folders)
